[package]
name = "to_num"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["to_num"]
description = "to_num trait"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-to_num.git"
homepage = "https://github.com/nathanfaucett/rs-to_num"

[dependencies]
